--- a/end.html
+++ b/end.html
@@ -22,7 +22,7 @@
             <div class="form-footer">
                 <textarea id="textInput" class="captcha-input" placeholder="Proc jste vybrali tyto vzorky? Napiste svoje odpovēdi sem." rows="5" required></textarea>
             </div>
-            <button type="submit" class="captcha-button">Send</button>
+            <button type="submit" class="captcha-button">Odeslat</button>
         </form>
     </div>
 
